--- a/vmakeai_blog_sample.html
+++ b/vmakeai_blog_sample.html
@@ -256,15 +256,16 @@
 
             <h3>1. Composite Virtual Fashion Models</h3>
             <p>
-                Merge your products with virtual fashion models by
-                <strong>customizing gender, age, skin tone, and face</strong>.
-                You can even change the model's facial expressions and body
-                shape. Need something unique for your brand?
-                <a href="https://vmake.ai/models" target="_blank"
-                    >Create a virtual fashion model</a
+                <a href="https://vmake.ai/ai-model" target="_blank"
+                    >Merge your clothing products with virtual fashion models</a
                 >
-                that looks exactly like your target demographic, showcasing your
-                product in the best possible way.
+                <strong>in just 2 minutes</strong>, with options to
+                <strong
+                    >customize gender, age, skin tone, and face visuals</strong
+                >. You can even change the model's facial expressions and body
+                shape. Need something unique for your brand? Create a virtual
+                fashion model that looks exactly like your target demographic,
+                showcasing your product in the best possible way.
             </p>
 
             <img
